# tlm-sql-backup

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/backup/: compression.rs  job.rs  mod.rs  scheduler.rs
src/cli/: menu.rs  mod.rs  wizard.rs
src/config/: mod.rs  types.rs
src/database/: driver.rs  mod.rs  mysql.rs
src/log/: mod.rs
src/upload/: discord.rs  mod.rs  uploader.rs
src/web/: dashboard.html  mod.rs  server.rs  state.rs
